# polymarket-analyzer

./: .env.example  .gitignore  INVESTMENT_BRIEFING.md  PLAN.md  README.md  advanced_risk_analysis.py  arbitrage_briefing.md  backtest_simulation.py  create_honest_visualizations.py  create_visualizations.py  cross_platform_analysis.py  cross_platform_briefing.md  expected_value_analysis.py  exploration.ipynb  favorite_longshot_briefing.md  financial_markets_briefing.md  generate_pdf.py  generate_report.py  honest_risk_analysis.py  investigate_data.py  monte_carlo_simulation.py  pyproject.toml  requirements.txt  run.py  scan_live.py  strategy_analysis.ipynb  trading_signals.py
analysis/: __init__.py  backtest_engine.py  bias_analysis.py
briefings/: arbitrage_briefing.md  cross_platform_briefing.md  favorite_longshot_briefing.md  financial_markets_briefing.md
configs/: credentials.env.example  default.json
notebooks/: favorite_longshot_pipeline.ipynb  financial_markets_pipeline.ipynb
results/backtests/: backtest_20260116_011006.json
results/signals/: signals_20260116_010828.json  signals_20260116_132643.json
src/: __init__.py  __main__.py
src/adapters/: __init__.py  base.py  deribit_options.py  kalshi.py  polymarket.py  polymarket_ws.py
src/alerts/: __init__.py  base.py  discord.py  telegram.py
src/analysis/: __init__.py  backtester.py  calibration.py  resolution_tracker.py
src/cli/: __init__.py  main.py  utils.py
src/collectors/: __init__.py  base.py  market_collector.py  orderbook_collector.py  trade_collector.py
src/core/: __init__.py  cache.py  config.py  utils.py
src/execution/: __init__.py  arb_executor.py  circuit_breaker.py  order_manager.py  paper_trader.py  position_tracker.py  risk_manager.py
src/metrics/: __init__.py  liquidity_depth.py  order_imbalance.py  spread_dynamics.py
src/scanners/: __init__.py  arb_scanner.py
src/scheduler/: __init__.py  scheduler.py
src/sizing/: __init__.py  kelly.py
src/storage/: __init__.py  database.py
src/strategies/: __init__.py  cross_platform.py  favorite_longshot.py  financial_markets.py  multi_arb.py  (+1 more)
tests/: __init__.py  test_alerts.py  test_cache.py  test_kelly.py  test_scheduler.py  test_storage.py  test_strategies.py
(+37 files in other folders)
