[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-analyzer"
version = "0.1.0"
description = "Quantitative analysis toolkit for prediction markets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Greg Butcher", email = "gregbutcher307@gmail.com"}
]
keywords = ["prediction-markets", "polymarket", "kalshi", "trading", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "py-clob-client>=0.34.1",
    "kalshi-python>=2.1.4",
    "polymarket-apis>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "aiohttp>=3.8.0",
    "structlog>=23.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "aiosqlite>=0.19.0",
    "web3>=6.0.0",
    "eth-account>=0.9.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
]
notebook = [
    "jupyter>=1.0.0",
    "nest-asyncio>=1.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "polymarket-analyzer[viz,notebook,dev]",
]

[project.scripts]
polymarket-analyzer = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Gregory-307/polymarket-analyzer"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (run with --slow)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
